--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ buildscript {
     ext.material_version = "1.2.0"
     ext.glide_version = "4.11.0"
 
+    ext.retrofit_version = "2.9.0"
+    ext.logging_interceptor_version = "4.8.0"
     ext.room_version = "2.2.5"
+
     repositories {
         google()
         jcenter()
