--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,7 +24,7 @@
         </activity>
 
         <activity
-            android:name=".DetailFootballActivity"
+            android:name=".detail.DetailFootballActivity"
             android:label="@string/title_activity_detail_home"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
