--- a/favorite/build.gradle
+++ b/favorite/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: "com.android.dynamic-feature"
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: "kotlin-kapt"
@@ -9,7 +9,6 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "org.d3if1008.dicodingexpert"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -17,25 +16,20 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-    dynamicFeatures = [':favorite']
+
 }
 
 dependencies {
     implementation project(":core")
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation project(":app")
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(":app")
+    implementation 'androidx.core:core-ktx:1.3.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
