--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -17,4 +17,7 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     implementation "org.koin:koin-androidx-fragment:$koin_version"
+    
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+
 }
