--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -17,7 +17,10 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     implementation "org.koin:koin-androidx-fragment:$koin_version"
-    
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+
+    implementation "net.zetetic:android-database-sqlcipher:4.4.0"
+    implementation "androidx.sqlite:sqlite:2.1.0"
 
 }
