--- a/core/build.gradle
+++ b/core/build.gradle
@@ -19,7 +19,7 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
